--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/nvim/colors/gruvbox"]
 	path = .config/nvim/colors/gruvbox
 	url = https://github.com/morhetz/gruvbox.git
+[submodule ".local/pyenv"]
+	path = .local/pyenv
+	url = https://github.com/pyenv/pyenv.git
