--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,10 @@ set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WIND
 # macOS 10.15: Catalina - not required
 #set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
+# order windows from 1 instead of 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 set-option -g default-terminal "screen-256color"
 set-option -s default-terminal "screen-256color"
 
@@ -41,4 +45,4 @@ bind-key R run-shell ' \
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.config/tmux/plugins/tpm/tpm'
+#run -b '~/.config/tmux/plugins/tpm/tpm'
