--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,9 @@ set-option -g display-time 4000
 #refresh 'status-left' and 'status-right' often then 15
 set-option -g status-interval 5
 
+# required for nvim
+set -sg escape-time 10
+
 bind-key C-p previous-window
 bind-key C-n next-window
 
