--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -21,6 +21,17 @@
                     }
                 }
             }
-        }
+        },
+
+        "golang": {
+            "trace.server":"verbose",
+            "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
+            "filetypes": ["go"],
+            "disableDynamicRegister":true,
+            "coc.preferences.colorSupport": false,
+            "initializationOptions": {
+                "usePlaceholders": true
+            }
+      }
     }
 }
