--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
+set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
 
 # macOS 10.14: Mojave - required
 # macOS 10.15: Catalina - not required
