adding OSC 52 support to tmux. great feature!

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,19 +19,34 @@ set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
 set -g base-index 1
 setw -g pane-base-index 1
 
-set-option -g default-terminal "screen-256color"
-set-option -s default-terminal "screen-256color"
+# tmux-256color instead of screen-256color enables italics
+set -g default-terminal "tmux-256color"
+
+# Tc enables true color
+set -ag terminal-overrides ",*256col*:colors=256:Tc"
 
 set-option -g mouse on
 
 set-option -g history-limit 50000
+
 # messages are displayed for 4 sec instead of 0.75
 set-option -g display-time 4000
+
 #refresh 'status-left' and 'status-right' often then 15
 set-option -g status-interval 5
 
 # required for nvim
-set -sg escape-time 10
+set -sg escape-time 0
+
+# enable OSC 52 clipboard
+# https://medium.freecodecamp.org/tmux-in-practice-integration-with-system-clipboard-bcd72c62ff7b
+set -g set-clipboard on
+
+setw -g aggressive-resize on
+
+# use bracketed paste, if the running application (vim/emacs/weechat) has
+# sent the terminal code to enable it.
+bind-key ] paste-buffer -p
 
 bind-key C-p previous-window
 bind-key C-n next-window
