--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,11 @@
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 # https://github.com/tmux-plugins/tmux-yank
-set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 # https://github.com/tmux-plugins/tmux-copycat
-set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
 
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
@@ -57,6 +57,10 @@ bind-key -n C-x setw synchronize-panes
 bind-key R run-shell ' \
 			tmux source-file ~/.tmux.conf > /dev/null; \
 			tmux display-message "Sourced .tmux.conf!"'
+
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
