moving to neovim nighly and neovim lsp

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@
 # https://github.com/tmux-plugins/tmux-copycat
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 
+set -g status-style 'bg=#333333 fg=#5eacd3'
+
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
 set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
