--- a/.config/i3/config
+++ b/.config/i3/config
@@ -47,7 +47,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id "rofi -show drun -show-icons"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -176,7 +177,36 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+
+set $bg #282828
+set $red #cc241d
+set $green #98971a
+set $yellow #d79921
+set $blue #458588
+set $purple #b16286
+set $aqua #689d68
+set $gray #a89984
+set $darkgray #1d2021
+
 bar {
-        #status_command i3status
+        status_command i3status
         position       top
+        colors {
+            # bar background color
+            background $bg
+            # text color used for blocks that do not have a color specified.
+            statusline $yellow
+            # workspaces section            
+            #                    border  backgr. text
+            focused_workspace    $aqua $aqua $darkgray
+            inactive_workspace   $darkgray $darkgray $yellow
+            active_workspace     $darkgray $darkgray $yellow
+            urgent_workspace     $red $red $bg
+        }
 }
+
+# class                 border|backgr|text|indicator|child_border
+client.focused          $blue $blue $darkgray $purple $darkgray
+client.focused_inactive $darkgray $darkgray $yellow $purple $darkgray
+client.unfocused        $darkgray $darkgray $yellow $purple $darkgray
+client.urgent           $red $red $white $red $red
