--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,7 +30,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-exec_always "setxkbmap -model pc104 -layout us,ru -variant ,, -option grp:ctrl_shift_toggle"
+exec_always "setxkbmap -model pc104 -layout us,ru -variant ,, -option grp:caps_toggle"
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
