--- a/.config/i3/config
+++ b/.config/i3/config
@@ -53,7 +53,8 @@ bindsym mod1+Tab exec --no-startup-id rofi -show window -case-sensitive -bg 'whi
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
