--- a/.config/playbooks/roles/x1/tasks/main.yaml
+++ b/.config/playbooks/roles/x1/tasks/main.yaml
@@ -6,3 +6,11 @@
     dest: /etc/X11/xorg.conf.d/
   tags:
     - x1-x
+
+- name: X1 Carbon copy /etc/default configs
+  become: true
+  copy:
+    src: default/
+    dest: /etc/default/
+  tags:
+    - x1-x
