--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # tmux-256color instead of screen-256color enables italics
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # Tc enables true color
 set -ag terminal-overrides ",*256col*:colors=256:Tc"
