tmux: move bar to top

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,14 @@
 
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
+#refresh 'status-left' and 'status-right' often then 15
+set -g status-interval 5
+
+set -g status-position top
+set -g status-justify left
+set -g status-left-length 200
+set -g status-right-length 200
+
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
 set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
@@ -33,9 +41,6 @@ set-option -g history-limit 50000
 
 # messages are displayed for 4 sec instead of 0.75
 set-option -g display-time 4000
-
-#refresh 'status-left' and 'status-right' often then 15
-set-option -g status-interval 5
 
 # required for nvim
 set -sg escape-time 0
