git config tuning

--- a/.config/git/config
+++ b/.config/git/config
@@ -26,3 +26,7 @@
   default = current
 [url "git@gitlab.booking.com:"]
 	insteadOf = https://gitlab.booking.com/
+[init]
+	defaultBranch = main
+[fetch]
+	prune = true
