fix ghostty fonts

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,12 @@
 config-file = ?optional-config-file
+font-family = ""
 font-family = "Menlo"
+font-family = ""
+font-family = "JetBrainsMono Nerd Font"
+font-family = ""
+font-family = "Meslo LG L"
+font-family = ""
+#font-family = "Iosevka"
 font-size = 15
 
 maximize = true
