--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -67,7 +67,8 @@ input-field {
     inner_color = $surface0
     font_color = $text
     fade_on_empty = false
-    placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+    #placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+    placeholder_text = <span foreground="##$textAlpha"></span>
     hide_input = false
     check_color = $accent
     fail_color = $red
