--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,6 @@
 source=~/.config/hypr/mocha.conf
 exec-once = hyprctl setcursor catppuccin-mocha-dark-cursors 24
+exec-once = /usr/bin/hyprland-per-window-layout
 # exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Refer to the wiki for more information.
@@ -188,10 +189,10 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us,ru
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:caps_toggle
     kb_rules =
 
     follow_mouse = 1
