--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,9 +1,25 @@
 general {
-    lock-cmd = pidof hyprlock || hyprlock
+    lock_cmd = pidof hyprlock || hyprlock
+    before_sleep_cmd = loginctl lock-session    # lock before suspend
+    after_sleep_cmd = hyprctl dispatch dpms on  # turn on monitor
 }
 
+# Lock the screen
 listener {
-    timeout = 900
-    on-timeput = loginctl lock-session
+    timeout = 300
+    on-timeout = loginctl lock-session
+}
+
+# Turn off screen
+listener {
+    timeout = 420
+    on-timeout = hyprctl dispatch dpms off
+    on-resume = hyprctl dispatch dpms on
+}
+
+# Suspend the system
+listener {
+    timeout = 600
+    on-timeout = systemctl suspend
 }
 
