--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -237,8 +237,8 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod&Shift, L, exec, hyprlock
 bind = Control_R&Shift_L&Alt_L, 3, exec, hyprshot -m window
 bind = Control_R&Shift_L&Alt_L, 4, exec, hyprshot -m region
-bind = , code:232, exec, ~/.local/bin/brightness_controll.sh dec
-bind = , code:233, exec, ~/.local/bin/brightness_controll.sh inc
+#bind = , code:232, exec, ~/.local/bin/brightness_controll.sh dec
+#bind = , code:233, exec, ~/.local/bin/brightness_controll.sh inc
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
