--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,8 +11,6 @@ xwayland {
     force_zero_scaling = true
 }
 
-
-
 ################
 ### MONITORS ###
 ################
@@ -126,32 +124,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    enabled = no, please :)
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -177,9 +150,9 @@ dwindle {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    #force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    #disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    focus_on_activate = true # e.g. will make browser active if url was requested from terminal
 }
 
 
@@ -206,7 +179,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 # Example per-device config
@@ -234,11 +207,9 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
-bind = $mainMod&Shift, L, exec, hyprlock
+bind = $mainMod&Shift, L, exec, playerctl -a pause; hyprlock
 bind = Control_R&Shift_L&Alt_L, 3, exec, hyprshot -m window
 bind = Control_R&Shift_L&Alt_L, 4, exec, hyprshot -m region
-#bind = , code:232, exec, ~/.local/bin/brightness_controll.sh dec
-#bind = , code:233, exec, ~/.local/bin/brightness_controll.sh inc
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
@@ -287,8 +258,8 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl -n2 set 5%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
