--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -33,8 +33,7 @@
   },
   "memory":{
       "interval": 10,
-      "format": "MEM: {percentage}% ",
-      //"max-length": 10
+      "format": "{percentage}% ",
 
   },
   "bluetooth": {
