--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -137,6 +137,12 @@ animations {
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 
+workspace = 2, gapsout:0, gapsin:0, fullscreen:0
+windowrule = bordersize 0, floating:0, onworkspace:2
+windowrule = rounding 0, floating:0, onworkspace:2
+
+#windowrule = float, title:^(.*)?(Brave)(.*)?$
+
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
