nvim: lsp plugins refactoring

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -14,4 +14,4 @@ maximize = true
 shell-integration-features = sudo
 macos-option-as-alt = true
 
-background-opacity = 0.3
+#background-opacity = 0.3
