--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,37 +1,32 @@
-# List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-# https://github.com/tmux-plugins/tmux-yank
-# set -g @plugin 'tmux-plugins/tmux-yank'
-# https://github.com/tmux-plugins/tmux-copycat
-# set -g @plugin 'tmux-plugins/tmux-copycat'
-
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 #refresh 'status-left' and 'status-right' often then 15
 set -g status-interval 5
 
+#### Styles
 set -g status-position top
 set -g status-justify left
 set -g status-left-length 200
 set -g status-right-length 200
+#set -g status-right ' #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)   #{s|^#{HOME}|~|:pane_title}   %b %d %H:%M'
+
+#setw -g mode-style bg=0,fg=default,noreverse
+#setw -g window-status-current-style bg=green,fg=black
+#setw -g window-status-format " #I:#W#F 
+#
+#setw -g window-status-style fg=green
 
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
 set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
 
-# macOS 10.14: Mojave - required
-# macOS 10.15: Catalina - not required
-#set-option -g default-command "reattach-to-user-namespace -l $SHELL"
-
 # order windows from 1 instead of 0
 set -g base-index 1
 setw -g pane-base-index 1
+set -g renumber-windows on
 
 # tmux-256color instead of screen-256color enables italics
 set -g default-terminal "screen-256color"
-
 # Tc enables true color
 set -ag terminal-overrides ",*256col*:colors=256:Tc"
 
@@ -61,9 +56,7 @@ bind-key C-n next-window
 # Send input to all panes in window
 bind-key -n C-x setw synchronize-panes
 
-bind-key R run-shell ' \
-			tmux source-file ~/.tmux.conf > /dev/null; \
-			tmux display-message "Sourced .tmux.conf!"'
+bind-key r source-file ~/.tmux.conf \; display-message "config reloaded"
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -80,3 +73,8 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 bind-key -n M-0 select-window -t 0
+
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
