hyprland: alt+tab switch to recent window/workspace. huprshell on super+tab

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -5,7 +5,6 @@
   "modules-center": ["hyprland/window"],
   "modules-right": [
     //"network", 
-    //"bluetooth", 
     "cpu",
     "memory",
     "temperature",
@@ -14,6 +13,7 @@
     "battery#bat2",
     //"upower",
     "backlight",
+    "bluetooth", 
     "tray",
     "keyboard-state",
     "sway/language",
@@ -105,5 +105,15 @@
     "on-click": "swaync-client -t -sw",
     "on-click-right": "swaync-client -d -sw",
     "escape": true
-  }
+  },
+  "bluetooth": {
+      "format": "\uf294 {status}",
+      "format-connected": "\uf294 {device_alias}",
+      "format-connected-battery": "\uf294 {device_alias} {device_battery_percentage}%",
+      "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+      "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
+      "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+      "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
+      "on-click": "blueman-manager"
+    }
 }
