--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -199,7 +199,10 @@ device {
 ###################
 ### KEYBINDINGS ###
 ###################
-
+binds {
+    #workspace_back_and_forth = true
+    allow_workspace_cycles = true
+}
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
@@ -212,6 +215,9 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+#bind = ALT, TAB, focuscurrentorlast
+bind = ALT, TAB, workspace, previous
 
 bind = $mainMod&Shift, L, exec, playerctl -a pause; hyprlock
 bind = Control_R&Shift_L&Alt_L, 3, exec, hyprshot -m window
