--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -7,7 +7,11 @@ $font = JetBrainsMono Nerd Font
 # GENERAL
 general {
     disable_loading_bar = true
+    grace = 0
     hide_cursor = true
+    no_fade_in = false
+    no_fade_out = false
+    ignore_empty_input = false
 }
 
 # BACKGROUND
@@ -23,7 +27,7 @@ label {
     monitor =
     text = cmd[update:30000] echo "$(date +"%R")"
     color = $text
-    font_size = 90
+    font_size = 50
     font_family = $font
     position = -30, 0
     halign = right
