tinkering tmux conf to be compatible with windows 11 terminal

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -26,9 +26,9 @@ setw -g pane-base-index 1
 set -g renumber-windows on
 
 # tmux-256color instead of screen-256color enables italics
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 # Tc enables true color
-set -ag terminal-overrides ",*256col*:colors=256:Tc"
+set -ag terminal-overrides ',*256col*:colors=256:Tc:RGB'
 
 set-option -g mouse on
 
@@ -38,7 +38,12 @@ set-option -g history-limit 50000
 set-option -g display-time 4000
 
 # required for nvim
-set -sg escape-time 0
+#set -sg escape-time 0
+
+# fix garbage chars on Windows Terminal
+# https://github.com/microsoft/terminal/issues/18600
+set -g escape-time 50
+set -g focus-events off
 
 # enable OSC 52 clipboard
 # https://medium.freecodecamp.org/tmux-in-practice-integration-with-system-clipboard-bcd72c62ff7b
@@ -56,7 +61,7 @@ bind-key C-n next-window
 # Send input to all panes in window
 bind-key -n C-x setw synchronize-panes
 
-bind-key r source-file ~/.tmux.conf \; display-message "config reloaded"
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "config reloaded"
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
