--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -217,6 +217,8 @@ bind = $mainMod, J, togglesplit, # dwindle
 #bind = ALT, TAB, focuscurrentorlast
 bind = ALT, TAB, workspace, previous
 
+bind = Control_R&Shift_R&Alt_L, W, exec, killall waybar; waybar
+
 bind = $mainMod&Shift, L, exec, playerctl -a pause; hyprlock
 bind = Control_R&Shift_L&Alt_L, 3, exec, hyprshot -m window
 bind = Control_R&Shift_L&Alt_L, 4, exec, hyprshot -m region
