--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -3,12 +3,12 @@
     "reload_style_on_change": true,
     "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 42, // Waybar height (to be removed for auto height)
+    "height": 25, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
-    "spacing": 4, // Gaps between modules (4px)
+    "spacing": 2, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
-        // "custom/arch",
+        "custom/arch",
         "hyprland/workspaces"
     ],
     "modules-center": [
@@ -18,11 +18,10 @@
         "tray",
         "idle_inhibitor",
         "pulseaudio",
-        "network",
+        //"network",
         "temperature",
-        "hyprland/language",
         "battery",
-        "battery#bat2",
+        "hyprland/language",
         "clock"
     ],
     //Modules configuration
